# SystemCleaner

./: .gitignore  CMakeLists.txt  README.md  build_release.bat
source/: main.cpp
source/common/: cleaner_info.hpp  scoped_guards.hpp  types.hpp
source/core/: path_validator.cpp  path_validator.hpp  system_cleaner.cpp  system_cleaner.hpp  texture_manager.cpp
source/gui/: gui.cpp
source/gui/widgets/: cleaner_panel.cpp  cleaner_panel.hpp
source/utils/: custom_widgets.hpp  dialogs.cpp  dialogs.hpp  path_validator.cpp  path_validator.hpp
